# 5ProgeDrone

./: CMakeLists.txt  Dockerfile  README.md  package.xml
docs/: docker_usage.md  linux_base_commands.md  mavros.md  ros_base_commands.md  ros_cookbook.md
examples/: simple_flight_example.cpp  simple_flight_example.py
include/: rotationTransform.hpp  uav_controller.hpp
launch/: Start.launch  turtle_controller.launch
scripts/: start_sim_docker.sh
src/: rotationTransform.cpp  uav_controller___.cpp  uav_controller_node Доделать.cpp  uav_controller_node.cpp  uav_controller_node__.cpp
srv/: GoToTrajectory.srv  GoToWaypoint.srv
